--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "file-loader": "^4.2.0",
     "friendly-errors-webpack-plugin": "^1.7.0",
     "fs-extra": "^8.1.0",
+    "ftp-upload": "^1.1.4",
     "html-loader": "^0.5.5",
     "html-webpack-plugin": "^3.2.0",
     "inobounce": "^0.2.0",
@@ -55,6 +56,7 @@
     "sass-resources-loader": "^2.0.1",
     "scss": "^0.2.4",
     "scss-loader": "0.0.1",
+    "ssh2-sftp-client": "^5.1.0",
     "style-loader": "^1.0.0",
     "uglifyjs-webpack-plugin": "^2.2.0",
     "url-loader": "^2.2.0",
@@ -79,6 +81,7 @@
   "dependencies": {
     "awe-dnd": "^0.3.4",
     "core-js": "^3.3.3",
+    "dingtalk-jsapi": "^2.9.10",
     "mysql": "^2.17.1",
     "vue-loading-new": "^1.0.7",
     "vue-router": "^3.1.3"
